--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-hg.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Harsh Gheenaiya</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.snapchat.com/add/itsharshu_2022?share_id=3O2XoBJgFXw&locale=en-US" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-hg.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Graphic Designer &amp; Web Developer.</h3>
@@ -96,7 +96,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>14 Augest 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://harshgheenaiya.github.io/Harsh.info/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Status</strong> <span>Unmerried</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 96385 16334</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Surat, India</span></li>
                 </ul>
