--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>HG_Creation</span></strong>
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">Harsh Gheenaiya</a>
