--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-hg.png" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-hg_1.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Harsh Gheenaiya</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.snapchat.com/add/itsharshu_2022?share_id=3O2XoBJgFXw&locale=en-US" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-hg.png" class="img-fluid" alt="">
+            <img src="assets/img/profile-hg.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Graphic Designer &amp; Web Developer.</h3>
@@ -481,7 +481,7 @@
                   Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/employee.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/employee_1.jpg" class="testimonial-img" alt="">
                 <h3>Harsh Gheenaiya</h3>
                 <h4>Developer &amp; Designer</h4>
               </div>
