--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/mknanbqd" method="POST" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/xlekonvl" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
