--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="resume-item">
               <h4>Graphic Design & 2D Animation</h4>
               <h5>2021 - 2022</h5>
-              <p><em>Par infotech</em></p>
+              <p><em><a href="https://parsolution.net">Par Solution</a></em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
@@ -286,7 +286,7 @@
             <div class="resume-item">
               <h4>Wordpress</h4>
               <h5>Present</h5>
-              <p><em>Par infotech</em></p>
+              <p><em><a href="https://parsolution.net">Par Solution</a></em></p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
