--- a/index.html
+++ b/index.html
@@ -430,52 +430,52 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">Birthday Card</a></h4>
-            <p class="description">1 Card: 400Rs/-</p>
-            <p class="description">Urgent Card: 450Rs/-</p>
+            <p class="description">1 Card: 500Rs/-</p>
+            <!-- <p class="description">Urgent Card: 450Rs/-</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a href="">Invitation Card</a></h4>
-            <p class="description">1 Card: 400Rs/-</p>
-            <p class="description">Urgent Card: 450Rs/-</p>
+            <p class="description">1 Card: 500Rs/-</p>
+            <!-- <p class="description">Urgent Card: 450Rs/-</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a href="">Death Card</a></h4>
             <p class="description">1 Card: 300Rs/-</p>
-            <p class="description">Urgent Card: 350Rs/-</p>
+            <!-- <p class="description">Urgent Card: 350Rs/-</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
             <h4 class="title"><a href="">Wedding Kankotri</a></h4>
             <p class="description">Per Page: 250Rs/-</p>
-            <p class="description">Urgent Kankotri: Per Page 300Rs/-</p>
+            <!-- <p class="description">Urgent Kankotri: Per Page 300Rs/-</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
             <h4 class="title"><a href="">Wedding Countdown Photos</a></h4>
-            <p class="description">Per Photo: 120Rs/-</p>
-            <p class="description">Urgent Per Photo: 150Rs/-</p>
+            <p class="description">Per Photo: 150Rs/-</p>
+            <!-- <p class="description">Urgent Per Photo: 150Rs/-</p> -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Social Media Post</a></h4>
-            <p class="description">1 Post: 200Rs/-</p>
+            <p class="description">1 Post: 500Rs/-</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Business Card</a></h4>
-            <p class="description">1 Card: 300Rs/-</p>
+            <p class="description">1 Card: 500Rs/-</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Board-Banner Design</a></h4>
-            <p class="description">1 Banner: 300Rs/-</p>
+            <p class="description">1 Banner: 500Rs/-</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Birthday Video</a></h4>
-            <p class="description">Normal effect Video: 60/-</p>
+            <p class="description">Normal effect Video: 100/-</p>
           </div>        
         </div>
 
